[package]
name = "teardown-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.tokio]
vesion = "1.20.0"
features = [
    "macros",
    "rt-multi-thread"
]

[dependencies.serde]
version = "1.0.139"
features = [
    "derive"
]

[dependencies.quick-xml]
version = "0.23.0"
features = [
    "serde",
    "serialize"
]

[dependencies]
reqwest = "0.11.11"